fixing text-align

--- a/Zombie/css/style.css
+++ b/Zombie/css/style.css
@@ -68,3 +68,6 @@ button {
   width: 100%;
 }
 
+h1 {
+    text-align: center;
+}
